test/tests/compiler/8_loops/valid/extra_credit/switch_default_only.plx
pub fn main(none) i32 {
    a: i32 = 1
    match a {
        otherwise {
            return 1
        }
    }
    return false
}
